Enhance monitoring functionality with quick scan interval and notification criteria
- Added `quick_scan_interval_minutes` to `config.yaml` for configurable quick scan frequency.
- Refactored `encar_monitor_api.py` to implement immediate notifications for new listings based on specific criteria, including coupe type and view count.
- Enhanced logging to track notifications sent during regular and quick scans.
- Improved error handling for notification sending and listing processing.
- Removed deprecated logic for handling truly new listings, streamlining the scanning process.

--- a/config.yaml
+++ b/config.yaml
@@ -53,6 +53,7 @@ monitoring:
     
   # Performance settings
   check_interval_minutes: 15  # How often to check for new listings
+  quick_scan_interval_minutes: 5  # How often to check for new listings
   notification_threshold: 5  # Send notification if views < this number
   
   # Smart features
