--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,35 @@
-# Byte-compiled / optimized / DLL files
+# Sensitive Configuration Files
+config.yaml
+.env
+*.env
+
+# Database Files
+*.db
+*.db-journal
+*.sqlite
+*.sqlite3
+
+# Log Files
+*.log
+encar_alerts.log
+encar_monitor.log
+lease_update.log
+omission_scanner.log
+test_enhanced_extraction.log
+test_lease_detection.log
+
+# Python Virtual Environment
+encar_venv/
+venv/
+env/
+.venv/
+.env/
+
+# Python Cache
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -20,139 +43,51 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-encar_venv/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# Project-specific files
-*.db
-*.sqlite
-*.sqlite3
-encar_listings.db
-*.log
-encar_monitor.log
-encar_alerts.log
-*.csv
-*.txt
-!requirements.txt
-!README.md
-
-# IDE files
+# IDE and Editor Files
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
-
-# OS files
 .DS_Store
 Thumbs.db
 
-# Temporary files
+# Playwright
+.playwright/
+
+# Screenshots and Debug Images
+*.png
+*.jpg
+*.jpeg
+*.gif
+debug_registration_final.png
+
+# System Files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Backup Files
+*.bak
+*.backup
 *.tmp
-*.temp 
+
+# Server Specific
+/logs/
+/data/
+/backups/
+
+# Deployment Files (keep templates)
+!*.template.*
+!.env.template
+!config.template.yaml
+
+# Test Files Output
+test_*.log
+debug_*.log
