Update browser configuration in templates for server deployment
- Set browser settings in `config.template.yaml` to fixed values for headless mode, wait time, and timeout to ensure consistent behavior during execution.
- Removed browser configuration variables from `env.template` to simplify environment setup and avoid redundancy.

--- a/config.template.yaml
+++ b/config.template.yaml
@@ -110,9 +110,9 @@ notifications:
 
 # Browser Settings
 browser:
-  headless: ${BROWSER_HEADLESS}
-  wait_time: ${BROWSER_WAIT_TIME}  # Seconds to wait for page load
-  timeout: ${BROWSER_TIMEOUT}   # Page load timeout
+  headless: true
+  wait_time: 3  # Seconds to wait for page load
+  timeout: 30   # Page load timeout
   
   # Performance settings
   delay_between_requests: 2  # Seconds between page requests
